# control-clinic

./: .gitignore  Makefile  README.md  app.py  database.py  main.py  pyproject.toml
control_clinic/: __init__.py  admin_service.py  admin_views.py  forms.py  gunicorn_config.py  models.py  populate_datas.py  service.py  views.py
control_clinic/controller/: clients.py  clinic_care_view.py  dash.py  doctors.py  employees.py  medical_records_view.py  signin.py
control_clinic/controller/medical_records/: initial_page.py
control_clinic/forms/: clinic_care_forms.py  doctors_form.py  employees_form.py  medical_exams_form.py  medical_records_form.py  patients_form.py
control_clinic/models/: doctors.py  employees.py  medical_records_model.py  patients.py
control_clinic/static/css/: dash.css  messages.css  signin.css  style.css  style_404.css
control_clinic/templates/: base.html  error_404.html
control_clinic/templates/admin/: index.html
control_clinic/templates/auth/: login.html
control_clinic/templates/dash/: dash_initial_page copy.html  dash_initial_page.html  dash_list_clinic_care.html  dash_list_clinic_care_doctor.html
control_clinic/templates/doctors/: list_doctor.html  list_doctors.html  list_medicos.html  update_doctor.html
control_clinic/templates/employees/: list_employee.html  list_employees.html  update_employees.html
control_clinic/templates/forms/: _navbar-register.html  base.html  clinic-care.html  medical-records.html  register-doctor.html  register-employee.html  register-exams.html  register-patient.html  register-specialty.html
(+13 files in other folders)
